// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "llm.grpc.agentController";
option java_outer_classname = "AgentControllerProto";
option objc_class_prefix = "LLM";

// 定义包名，避免命名冲突
package llm;

// 定义服务
service AgentController {
  rpc addAgentTask (addAgentTaskRequest) returns (addAgentTaskResponse) {}
  rpc triggerAgentTask (triggerAgentTaskRequest) returns (triggerAgentTaskResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message addAgentTaskRequest {
  string agentTaskInfo = 1;
}

message addAgentTaskResponse {
  uint32 count = 1;
}

message triggerAgentTaskRequest {
  string agentCode = 1;
}

message triggerAgentTaskResponse {
  uint32 handleStatus = 1;
  string handleRet = 2;
  string errorMsg = 3;
}