// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "pptonline.grpc.pptInfo";
option java_outer_classname = "PptInfoProto";
option objc_class_prefix = "PPTONLINE";

// 定义包名，避免命名冲突
package pptonline;

// 定义服务
service PptInfo {
  rpc createEmptyPpt (CreateEmptyPptRequest) returns (PptSimpleInfoSchema) {}
  rpc copyPptList (CopyPptListRequest) returns (OutPptListResponse) {}
  rpc importPptx (ImportPptxRequest) returns (PptSimpleInfoSchema) {}
  rpc getAIPPTAgentTask (GetAIPPTAgentTaskRequest) returns (GetAIPPTAgentTaskResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message UserSimpleSchema {
  string userCode = 1;
  string realName = 2;
}

message PptSimpleInfoSchema {
  string pptCode = 1;
  string title = 2;
  string coverUrl = 3;
  int32 status = 4;
  string externalSource = 5;
}

message CreateEmptyPptRequest {
  UserSimpleSchema userInfo = 1;
  string title = 2;
  string externalSource = 3;
}

message CopyPptListRequest {
  UserSimpleSchema userInfo = 1;
  repeated string pptCodes = 2;
  string externalSource = 3;
}

message ImportPptxRequest {
  UserSimpleSchema userInfo = 1;
  string fileUrl = 2;
  string title = 3;
  string externalSource = 4;
}

message OutPptListResponse {
  repeated PptSimpleInfoSchema list = 1;
}

message GetAIPPTAgentTaskRequest {
  string subject = 1;
  string options = 2;
}

message GetAIPPTAgentTaskResponse {
  string agentTaskInfo = 1;
}